feat: complete employee, contract, attendance, payroll, and file management